
             • All ‘...’ arguments can now be provided as ‘vector’ or
               ‘list’ to gain more control of the plot appearance,

             • argument ‘abline’ now works also in combination with
               ‘combine = TRUE’ and allows to set ablines independently
               over different plots (#260),

             • automatic axes labelling improved for ‘combine = TRUE’,

             • support further ‘...’ argument ‘legend’ (TRUE/FALSE).

         • ‘plot_RLum.Data.Curve()’

             • Fix seldom bug that causes unexpected function behaviour
               if ‘xlab’ or ‘ylab’ exist as objects on the global
               environment (#265),

             • add argument ‘smooth’ to provide an automatic curve
               smoothing for plotting based on a running mean.

         • ‘plot_RLum.Data.Spectrum()’

             • Added ‘matrix’ as allowed input,

             • add new argument ‘limit_counts’ to further the counts to
               a maximum value (the value provided), this might be
               especially helpful in case of TL spectra,

             • the argument ‘optical.wavelength.colours’ was not
               working in all cases sufficiently; corrected,

             • minor graphical adjustments.

         • ‘read_BIN2R()’

             • Handling of corrupt BIN-files improved, the functions
               tries to import whatever possible,

             • the argument ‘n.records’ was not respected under rare
               circumstances,

             • in course of this (corrupt BIN-files, not respected
               ‘n.records’) the output data frame was longer than the
               list of count values; corrected,

             • in some cases the grain number was not imported
               correctly; fixed.

         • ‘Risoe.BINfileData2RLum.Analysis()’

             • Single grain data had not been converted correctly to
               ‘RLum.Analysis’ objects.  Each grain within a position