@@ -1359,11 +1359,11 @@
 </td>
 <td class=cellinside><br /> The function provides a standardised plot output for curve data of an<br /> RLum.Analysis S4 class object<br />
 </td>
-<td class=cellinside>0.3.4
+<td class=cellinside>0.3.5
 </td>
-<td class=cellinside>2016-04-05
+<td class=cellinside>2016-04-07
 </td>
-<td class=cellinside>10:02:16
+<td class=cellinside>10:26:50
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
