@@ -1,5 +1,5 @@
 % latex table generated in R 3.3.0 by xtable 1.8-2 package
-% Wed Apr  6 23:35:38 2016
+% Thu Apr  7 10:29:16 2016
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -131,7 +131,7 @@
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany),  Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)  Based on a rewritten$<$br /$>$ S script of Rex Galbraith, 2010$<$br /$>$  R Luminescence Package Team \\ 
   69 & plot\_Risoe.BINfileData & Plot single luminescence curves from a BIN file object & $<$br /$>$ Plots single luminescence curves from an object returned by the$<$br /$>$ read\_BIN2R  function.$<$br /$>$ & 0.4.1 & 2015-11-29 & 17:27:48
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France),  Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
-  70 & plot\_RLum.Analysis & Plot function for an RLum.Analysis S4 class object & $<$br /$>$ The function provides a standardised plot output for curve data of an$<$br /$>$ RLum.Analysis S4 class object$<$br /$>$ & 0.3.4 & 2016-04-05 & 10:02:16
+  70 & plot\_RLum.Analysis & Plot function for an RLum.Analysis S4 class object & $<$br /$>$ The function provides a standardised plot output for curve data of an$<$br /$>$ RLum.Analysis S4 class object$<$br /$>$ & 0.3.5 & 2016-04-07 & 10:26:50
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   71 & plot\_RLum.Data.Curve & Plot function for an RLum.Data.Curve S4 class object & $<$br /$>$ The function provides a standardised plot output for curve data of an$<$br /$>$ RLum.Data.Curve S4 class object$<$br /$>$ & 0.2.0 & 2016-04-06 & 23:29:17
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
