@@ -223,7 +223,9 @@
         \item argument \code{abline} now works also in combination with \code{combine = TRUE} and
         allows to set ablines independently over different plots (#260),
         \item automatic axes labelling improved for \code{combine = TRUE},
-        \item support further \code{...} argument \code{legend} (TRUE/FALSE).
+        \item support further \code{...} argument \code{legend} (TRUE/FALSE),
+        \item add support for argument \code{smooth} for \code{RLum.Data.Curve} objects (see
+        entry for \code{plot_RLum.Data.Curve}.
       }
 
          \item \code{plot_RLum.Data.Curve()}
